[workspace]
members = [
    "btls",
    "btls-sys",
    "tokio-btls",
    "compio-btls",
]
default-members = [
    "btls",
    "btls-sys",
    "tokio-btls",
]
resolver = "2"

[workspace.package]
version = "0.5.6"
repository = "https://github.com/0x676e67/btls"
edition = "2021"
rust-version = "1.85"

[workspace.metadata.release]
pre-release-commit-message = "Release {{version}}"
shared-version = true
tag-prefix = ""
publish = false

[workspace.dependencies]
btls-sys = { version = "0.5.6", path = "./btls-sys" }
btls = { version = "0.5.6", path = "./btls" }
tokio-btls = { version = "0.5.6", path = "./tokio-btls" }

bindgen = { version = "0.72.0", default-features = false, features = ["runtime"] }
bitflags = "2.11.1"
brotli = "8.0.2"
cmake = "0.1.58"
fs_extra = "1.3.0"
fslock = "0.2"
foreign-types = "0.5"
libc = "0.2.185"
hex = "0.4"
futures = "0.3"
tokio = "1.52.1"
compio = "0.18.0"
anyhow = "1"
openssl-macros = "0.1.1"
