[package]
name = "quinn-btls"
version = "0.1.0"
authors = ["0x676e67 <gngppz@gmail.com>"]
license = "MIT OR Apache-2.0"
edition = { workspace = true }
rust-version = { workspace = true }
repository = { workspace = true }
description = "BoringSSL crypto provider for quinn"
keywords = ["quic"]
categories = ["network-programming", "asynchronous"]

[badges]
maintenance = { status = "passively-maintained" }

[features]
default = ["btls/default", "runtime-tokio"]
runtime-tokio = ["quinn/runtime-tokio"]

# Use a FIPS-validated version of boringssl.
fips = ["btls/fips"]

# Add a prefix to all symbols in libcrypto and libssl to prevent conflicts
# with OpenSSL versions that might be linked in the same process.
prefix-symbols = ["btls/prefix-symbols"]

[dependencies]
btls = { workspace = true }
btls-sys = { workspace = true }
bytes = "1"
foreign-types-shared = "0.3"
lru = "0.16"
quinn = { version = "0.11.9", default-features = false }
quinn-proto = { version = "0.11.13", default-features = false }
rand = "0.10.0"
tracing = "0.1"

[dev-dependencies]
anyhow = "1.0"
assert_matches = "1"
clap = { version = "4", features = ["derive"] }
directories-next = "2"
hex-literal = "1.0"
rcgen = "0.14"
rustls-pemfile = "2"
tokio = { version = "1", features = [
    "rt",
    "rt-multi-thread",
    "time",
    "macros",
    "sync",
] }
tracing-subscriber = { version = "0.3", default-features = false, features = [
    "fmt",
] }
url = "2"
h3 = "0.0.8"
h3-quinn = "0.0.10"
http = "1"
http-body = "1.0.1"
http-body-util = "0.1.3"
futures-core = "0.3"

[[example]]
name = "client"
required-features = ["runtime-tokio"]
